Initial set-up of html page
set up using select/option and a simple function in index.js for taking the id value of the grade series in IS 201

--- a/index.html
+++ b/index.html
@@ -11,3 +11,109 @@ Riley Marshall
 <!-- can you see this-->
 
 <!--test-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="index.js"></script>
+</head>
+<body>
+    <fieldset>
+        <legend>What grades did you get? </legend>
+            <form action=""><span>Information Systems 201</span><br>
+                <select name="grade" id="201Grade">
+                    <option value="0">A</option>
+                    <option value="1">A-</option>
+                    <option value="2">B+</option>
+                    <option value="3">B</option>
+                    <option value="4">B-</option>
+                    <option value="5">C+</option>
+                    <option value="6">C</option>
+                    <option value="7">C-</option>
+                    <option value="8">D+</option>
+                    <option value="9">D</option>
+                    <option value="10">D-</option>
+                    <option value="11">F</option>
+                </select>
+                <br><br>
+            </form>
+            <form action=""><span>Information Systems 303</span><br>
+                <select name="grade" id="303Grade">
+                    <option value="0">A</option>
+                    <option value="1">A-</option>
+                    <option value="2">B+</option>
+                    <option value="3">B</option>
+                    <option value="4">B-</option>
+                    <option value="5">C+</option>
+                    <option value="6">C</option>
+                    <option value="7">C-</option>
+                    <option value="8">D+</option>
+                    <option value="9">D</option>
+                    <option value="10">D-</option>
+                    <option value="11">F</option>
+                </select>
+                <br><br>
+            </form>
+            <form action=""><span>Accounting 200</span><br>
+                <select name="grade" id="accountingGrade">
+                    <option value="0">A</option>
+                    <option value="1">A-</option>
+                    <option value="2">B+</option>
+                    <option value="3">B</option>
+                    <option value="4">B-</option>
+                    <option value="5">C+</option>
+                    <option value="6">C</option>
+                    <option value="7">C-</option>
+                    <option value="8">D+</option>
+                    <option value="9">D</option>
+                    <option value="10">D-</option>
+                    <option value="11">F</option>
+                </select>
+                <br><br>
+            </form>
+            <form action=""><span>Marketing 201</span><br>
+                <select name="grade" id="marketingGrade">
+                    <option value="0">A</option>
+                    <option value="1">A-</option>
+                    <option value="2">B+</option>
+                    <option value="3">B</option>
+                    <option value="4">B-</option>
+                    <option value="5">C+</option>
+                    <option value="6">C</option>
+                    <option value="7">C-</option>
+                    <option value="8">D+</option>
+                    <option value="9">D</option>
+                    <option value="10">D-</option>
+                    <option value="11">F</option>
+                </select>
+                <br><br>
+            </form>
+            <form action=""><span>Statistics 121</span><br>
+                <select name="grade" id="statsGrade">
+                    <option value="0">A</option>
+                    <option value="1">A-</option>
+                    <option value="2">B+</option>
+                    <option value="3">B</option>
+                    <option value="4">B-</option>
+                    <option value="5">C+</option>
+                    <option value="6">C</option>
+                    <option value="7">C-</option>
+                    <option value="8">D+</option>
+                    <option value="9">D</option>
+                    <option value="10">D-</option>
+                    <option value="11">F</option>
+                </select>
+                <br><br>
+            </form>
+    </fieldset> 
+    <p id="foo">test</p>
+    <button onclick="findGrade()">hello</button>
+    
+
+
+</body>
+</html>
