css, header, footer, formatting

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@ Riley Marshall
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
 </head>
+<header>header</header>
 <body>
     <fieldset>
-        <legend>What grades did you get? </legend>
+        <legend>What grades did you get?</legend>
             <form action=""><span>Information Systems 201</span><br>
                 <select name="grade" id="201Grade">
                     <option value="0">A</option>
@@ -109,11 +111,48 @@ Riley Marshall
                 </select>
                 <br><br>
             </form>
+            <br>
+            <label for="">BYU Overall GPA</label>
+            <br>
+            <input type="text">
+            <br>
+            <label for="">BYU Last 30 Credits GPA</label>
+            <br>
+            <input type="text">
+            <br><br>
+            <button id="">Calculate</button>
+            <br><br>
+            <button id="">Reset</button>
     </fieldset> 
-    <p id="foo">test</p>
-    <button onclick="findGrade()">hello</button>
-    
-
+    <p><strong>Program Overview</strong>
+    <br><br>
+    The BS Information Systems program is available as a four-year traditional 
+    degree or as a five-year integrated option where students earn
+    both the BS IS and MISM degrees. The BS IS program is a 64-credit
+    degree including pre-management, junior core, management core, 
+    and a capstone.
+    <br><br>
+    <strong>Curriculum</strong>
+    <br><br>
+    Information systems students learn to define, develop, 
+    and maintain the information system infrastructure that 
+    supports the operations of all businesses, governments, 
+    and other institutions. The BS Information Systems degree 
+    develops the ability to function effectively as a 
+    professional, applying state-of-the-art technology 
+    in solving business problems. Students are trained in 
+    business and information systems and taught to understand 
+    complex business environments.
+    <br>
+    Built on a solid foundation of business courses, the curriculum
+    advances students’ understanding of technologies in the 
+    design and development of information systems. They gain 
+    technical expertise in systems analysis; systems design and 
+    implementation; database development and management; 
+    programming; telecommunications networking; 2-tier, 3-tier, 
+    and n-tier application development; and web application 
+    development.</p>
 
 </body>
+<footer>Jefferson Lambert || Carter Denton || Cole Brunson || Riley Marshall</footer>
 </html>
