--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@ Riley Marshall
             <br>
             <label for="">BYU Overall GPA</label>
             <br>
-            <input type="text">
+            <input type="number" step=".05" min="0" max="4.0" value="0.00">
             <br>
             <label for="">BYU Last 30 Credits GPA</label>
             <br>
-            <input type="text">
+            <input type="number" step=".05" min="0" max="4.0" value="0.00">
             <br><br>
             <button id="">Calculate</button>
             <br><br>
