--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@ Carter Denton
 Riley Marshall
 -->
 
-<!-- can you see this-->
-
-<!--test-->
+<!--Things I still need to do: 
+    1. make outline for script that alerts when not all things are filled out.
+    2. name all the inputs and everything i think
+    3. make sure all id's are unique
+    4. add a URL to the business school -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -22,12 +24,12 @@ Riley Marshall
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
 </head>
-<header>header</header>
+<header><h1>Marriot School of Business: Information Systems</h1></header>
 <body>
     <fieldset>
-        <legend>What grades did you get?</legend>
+        <legend>Calculate Potential</legend>
             <form action=""><span>Information Systems 201</span><br>
-                <select name="grade" id="201Grade">
+                <select onmouseleave="" name="grade" id="201Grade" autofocus>
                     <option value="0">A</option>
                     <option value="1">A-</option>
                     <option value="2">B+</option>
@@ -41,6 +43,7 @@ Riley Marshall
                     <option value="10">D-</option>
                     <option value="11">F</option>
                 </select>
+                <span id="retake">Retake?</span><input id="retake201"type="checkbox" value="false">
                 <br><br>
             </form>
             <form action=""><span>Information Systems 303</span><br>
@@ -58,10 +61,11 @@ Riley Marshall
                     <option value="10">D-</option>
                     <option value="11">F</option>
                 </select>
+                <span id="retake">Retake?</span><input id="retake303"type="checkbox" value="false">
                 <br><br>
             </form>
             <form action=""><span>Accounting 200</span><br>
-                <select name="grade" id="accountingGrade">
+                <select name="accGrade" id="accountingGrade">
                     <option value="0">A</option>
                     <option value="1">A-</option>
                     <option value="2">B+</option>
@@ -75,6 +79,7 @@ Riley Marshall
                     <option value="10">D-</option>
                     <option value="11">F</option>
                 </select>
+                <span id="retake">Retake?</span><input id="retakeAccounting"type="checkbox" value="false">
                 <br><br>
             </form>
             <form action=""><span>Marketing 201</span><br>
@@ -92,6 +97,7 @@ Riley Marshall
                     <option value="10">D-</option>
                     <option value="11">F</option>
                 </select>
+                <span id="retake">Retake?</span><input id="retakeMarketing"type="checkbox" value="false">
                 <br><br>
             </form>
             <form action=""><span>Statistics 121</span><br>
@@ -109,20 +115,41 @@ Riley Marshall
                     <option value="10">D-</option>
                     <option value="11">F</option>
                 </select>
+                <span id="retake">Retake?</span><input id="retakeStats"type="checkbox" value="false">
+                <br><br>
+            </form>
+            <form action=""><span>Finance 121</span><br>
+                <select name="grade" id="financeGrade">
+                    <option value="0">A</option>
+                    <option value="1">A-</option>
+                    <option value="2">B+</option>
+                    <option value="3">B</option>
+                    <option value="4">B-</option>
+                    <option value="5">C+</option>
+                    <option value="6">C</option>
+                    <option value="7">C-</option>
+                    <option value="8">D+</option>
+                    <option value="9">D</option>
+                    <option value="10">D-</option>
+                    <option value="11">F</option>
+                </select>
+                <span id="retake">Retake?</span><input id="retakeFinance"type="checkbox" value="false">
                 <br><br>
             </form>
             <br>
             <label for="">BYU Overall GPA</label>
             <br>
-            <input type="number" step=".05" min="0" max="4.0" value="0.00">
-            <br>
+            <input type="number" id="overallGPA"step=".05" min="0" max="4.0" value="0.00">
+            <br><br>
             <label for="">BYU Last 30 Credits GPA</label>
             <br>
-            <input type="number" step=".05" min="0" max="4.0" value="0.00">
+            <input type="number" id="last30GPA" step=".05" min="0" max="4.0" value="0.00">
             <br><br>
-            <button id="">Calculate</button>
+            <button onclick="displayTotal()">Calculate</button>
             <br><br>
-            <button id="">Reset</button>
+            <button id="">Reset</button><br>
+            <svg height="100" width="100">
+            <circle id="myCircle" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="green" display = "none"/></svg>
     </fieldset> 
     <p><strong>Program Overview</strong>
     <br><br>
