--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ Riley Marshall
     1. make outline for script that alerts when not all things are filled out.
     2. name all the inputs and everything i think
     3. make sure all id's are unique
-    4. add a URL to the business school -->
+    4. add a URL to the business school 
+    5. make calculation appear on page (and find out if it has to be a gpa or a percentage or what...)
+-->
 
 <!DOCTYPE html>
 <html lang="en">
