css changes, not permamnent

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ Jefferson Lambert
         -->
     <fieldset id='fieldy'>
         <legend>Calculate Potential</legend>
+        <div class = "grid-container">
+            <div class="grid-item">
             <form action=""><span>Information Systems 201</span><br>
                 <select onmouseleave="" name="grade" id="0" autofocus>
                     <option value='nada' disabled selected value style="display: none"></option>
@@ -49,6 +51,8 @@ Jefferson Lambert
                 <span id="retake">Retake?</span><input id="retake0"type="checkbox" value="false">
                 <br><br>
             </form>
+        </div>
+        <div class="grid-item">
             <form action=""><span>Information Systems 303</span><br>
                 <select name="grade" id="1">
                     <option value='nada' disabled selected value style="display: none"></option>
@@ -68,6 +72,8 @@ Jefferson Lambert
                 <span id="retake">Retake?</span><input id="retake1"type="checkbox" value="false">
                 <br><br>
             </form>
+        </div>
+        <div class="grid-item">
             <form action=""><span>Accounting 200</span><br>
                 <select name="accGrade" id="2">
                     <option value='nada' disabled selected value style="display: none"></option>
@@ -87,6 +93,8 @@ Jefferson Lambert
                 <span id="retake">Retake?</span><input id="retake2"type="checkbox" value="false">
                 <br><br>
             </form>
+        </div>
+        <div class="grid-item">
             <form action=""><span>Marketing 201</span><br>
                 <select name="grade" id="3">
                     <option value='nada' disabled selected value style="display: none"></option>
@@ -106,6 +114,8 @@ Jefferson Lambert
                 <span id="retake">Retake?</span><input id="retake3"type="checkbox" value="false">
                 <br><br>
             </form>
+        </div>
+        <div class="grid-item">
             <form action=""><span>Finance 121</span><br>
                 <select name="grade" id="4">
                     <option value='nada' disabled selected value style="display: none"></option>
@@ -125,6 +135,9 @@ Jefferson Lambert
                 <span id="retake">Retake?</span><input id="retake4"type="checkbox" value="false">
                 <br><br>
             </form>
+        </div>
+        </div>
+
             <br>
             <label for="">BYU Overall GPA</label>
             <br>
@@ -152,7 +165,7 @@ Jefferson Lambert
     <br><br>
     <strong>Curriculum</strong>
     <br><br>
-    Information systems students learn to define, develop, 
+    Information systems students and learn to define, develop, 
     and maintain the information system infrastructure that 
     supports the operations of all businesses, governments, 
     and other institutions. The BS Information Systems degree 
