Moved the text and changed some style

--- a/index.html
+++ b/index.html
@@ -28,8 +28,25 @@ Jefferson Lambert
         unique id name. 201 has autofocus, and we probably need to specify in the reset button function
         something like document.getElementById('201Grade').autofocus=true...not sure if that will work but it's there. 
         -->
+
+        
+<div class = "overviewTag">
+    <strong> Program Overview</strong>
+</div>
+<div class = "overviewText">
+    The BS Information Systems program is available as a four-year traditional 
+    degree or as a five-year integrated option where students earn
+    both the BS IS and MISM degrees. The BS IS program is a 64-credit
+    degree including pre-management, junior core, management core, 
+    and a capstone.
+</div>
+
+<div class = "enterBelow">
+    Enter your information <strong>below</strong> to calculate your chance of being addmitted into the program!
+</div>
+
     <fieldset id='fieldy'>
-        <legend>Calculate Potential</legend>
+        <legend class = "potentialTag"><strong>Calculate Potential</strong></legend>
         <div class = "grid-container">
             <div class="grid-item">
             <form action=""><span>Information Systems 201</span><br>
@@ -155,15 +172,10 @@ Jefferson Lambert
     </fieldset> 
     <!--display final grade here:-->
     <p id="finalGrade">Weighted likelihood of getting in: </p>
-    <p id="bodyb"><strong>Program Overview</strong>
-    <br><br>
-    The BS Information Systems program is available as a four-year traditional 
-    degree or as a five-year integrated option where students earn
-    both the BS IS and MISM degrees. The BS IS program is a 64-credit
-    degree including pre-management, junior core, management core, 
-    and a capstone.
-    <br><br>
+    <p id="bodyb"><strong></strong>
+    <div class = "curriculumHeader">
     <strong>Curriculum</strong>
+    </div>
     <br><br>
     Information systems students and learn to define, develop, 
     and maintain the information system infrastructure that 
