--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Jefferson Lambert
         <div class = "grid-container">
             <div class="grid-item">
             <form action=""><span>Information Systems 201</span><br>
-                <select onmouseleave="" name="grade" id="0" autofocus>
+                <select onmouseleave="" name="grade" id="0" autofocus class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
                     <option value="100">A</option>
                     <option value="101">A-</option>
@@ -71,7 +71,7 @@ Jefferson Lambert
         </div>
         <div class="grid-item">
             <form action=""><span>Information Systems 303</span><br>
-                <select name="grade" id="1">
+                <select name="grade" id="1" class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
                     <option value="100">A</option>
                     <option value="101">A-</option>
@@ -92,7 +92,7 @@ Jefferson Lambert
         </div>
         <div class="grid-item">
             <form action=""><span>Accounting 200</span><br>
-                <select name="accGrade" id="2">
+                <select name="accGrade" id="2" class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
                     <option value="100">A</option>
                     <option value="101">A-</option>
@@ -113,7 +113,7 @@ Jefferson Lambert
         </div>
         <div class="grid-item">
             <form action=""><span>Marketing 201</span><br>
-                <select name="grade" id="3">
+                <select name="grade" id="3" class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
                     <option value="100">A</option>
                     <option value="101">A-</option>
@@ -134,7 +134,7 @@ Jefferson Lambert
         </div>
         <div class="grid-item">
             <form action=""><span>Finance 121</span><br>
-                <select name="grade" id="4">
+                <select name="grade" id="4" class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
                     <option value="100">A</option>
                     <option value="101">A-</option>
@@ -152,21 +152,27 @@ Jefferson Lambert
                 <span id="retake">Retake?</span><input id="retake4"type="checkbox" value="false">
                 <br><br>
             </form>
+        
         </div>
-        </div>
-
+</div>
             <br>
+            <div class = "GPAGridContainer">
+            <div class = "GPABoxesIndividual">
             <label for="">BYU Overall GPA</label>
-            <br>
-            <input type="number" id="5"step=".05" min="0" max="4.0" value="0.00">
-            <br><br>
+            <input type="number" id="5"step=".05" min="0" max="4.0" value="0.00" class = "GPAInputBox">
+            </div>
+            <div class = "GPABoxesIndividual">
             <label for="">BYU Last 30 Credits GPA</label>
-            <br>
-            <input type="number" id="6" step=".05" min="0" max="4.0" value="0.00">
+            <input type="number" id="6" step=".05" min="0" max="4.0" value="0.00" class = "GPAInputBox">
+            </div>
+        </div>
+            
             <br><br>
+            <div class = "endButtons">
             <button id="calculateButton" onclick="finalGrade(takeGrade())">Calculate</button>
             <br><br>
             <button id="resetButton" onclick="clearCircle()">Reset</button><br>
+            </div>
             <svg height="100" width="100">
             <circle id="myCircle" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="green" display = "none"/></svg>
     </fieldset> 
