Finished with some CSS stuff

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Jefferson Lambert
 </div>
 
 <div class = "enterBelow">
-    Enter your information <strong>below</strong> to calculate your chance of being addmitted into the program!
+    Enter your information <strong>below</strong> to calculate your chance of being admitted into the program!
 </div>
 
     <fieldset id='fieldy'>
