--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@ Jefferson Lambert
     </fieldset> 
     <!--display final grade here:-->
     <p id="finalGrade">Weighted likelihood of getting in: </p>
-    <p id="bodyb"><strong></strong>
     <div class = "curriculumHeader">
-    <strong>Curriculum</strong>
-    </div>
+        <strong>Curriculum</strong>
+        </div>
+    <p class="justify-text biggerP">
     <br><br>
     Information systems students and learn to define, develop, 
     and maintain the information system infrastructure that 
@@ -192,7 +192,7 @@ Jefferson Lambert
     in solving business problems. Students are trained in 
     business and information systems and taught to understand 
     complex business environments.
-    <br>
+    <br><br>
     Built on a solid foundation of business courses, the curriculum
     advances students’ understanding of technologies in the 
     design and development of information systems. They gain 
