--- a/index.html
+++ b/index.html
@@ -29,24 +29,23 @@ Jefferson Lambert
         something like document.getElementById('201Grade').autofocus=true...not sure if that will work but it's there. 
         -->
 
-        
-<div class = "overviewTag">
-    <strong> Program Overview</strong>
-</div>
-<div class = "overviewText">
+
+     <h2>Program Overview</h2>
+
+
     The BS Information Systems program is available as a four-year traditional 
     degree or as a five-year integrated option where students earn
     both the BS IS and MISM degrees. The BS IS program is a 64-credit
     degree including pre-management, junior core, management core, 
     and a capstone.
-</div>
+
 
 <div class = "enterBelow">
     Enter your information <strong>below</strong> to calculate your chance of being admitted into the program!
 </div>
 
     <fieldset id='fieldy'>
-        <legend class = "potentialTag"><strong>Calculate Potential</strong></legend>
+        <h2>Calculate Potential</h2>
         <div class = "grid-container">
             <div class="grid-item">
             <form action=""><span>Information Systems 201</span><br>
@@ -178,9 +177,7 @@ Jefferson Lambert
     </fieldset> 
     <!--display final grade here:-->
     <p id="finalGrade">Weighted likelihood of getting in: </p>
-    <div class = "curriculumHeader">
-        <strong>Curriculum</strong>
-        </div>
+    <h2>Curriculum</h2>
     <p class="justify-text biggerP">
     <br><br>
     Information systems students and learn to define, develop, 
