justified some text

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ Jefferson Lambert
 
      <h2>Program Overview</h2>
 
-
+    <p class="justify-text">
     The BS Information Systems program is available as a four-year traditional 
     degree or as a five-year integrated option where students earn
     both the BS IS and MISM degrees. The BS IS program is a 64-credit
     degree including pre-management, junior core, management core, 
     and a capstone.
-
+    </p>
 
 <div class = "enterBelow">
     Enter your information <strong>below</strong> to calculate your chance of being admitted into the program!
@@ -178,7 +178,7 @@ Jefferson Lambert
     <!--display final grade here:-->
     <p id="finalGrade">Weighted likelihood of getting in: </p>
     <h2>Curriculum</h2>
-    <p class="justify-text biggerP">
+    <p class="justify-text">
     <br><br>
     Information systems students and learn to define, develop, 
     and maintain the information system infrastructure that 
