--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@ Jefferson Lambert
         something like document.getElementById('201Grade').autofocus=true...not sure if that will work but it's there. 
         -->
 
+    <div class = "backgroundImage">
+        <h2>Program Overview</h2>
 
-     <h2>Program Overview</h2>
-
-    <p class="justify-text">
-    The BS Information Systems program is available as a four-year traditional 
-    degree or as a five-year integrated option where students earn
-    both the BS IS and MISM degrees. The BS IS program is a 64-credit
-    degree including pre-management, junior core, management core, 
-    and a capstone.
-    </p>
-
+        <p class="justify-text">
+        The BS Information Systems program is available as a four-year traditional 
+        degree or as a five-year integrated option where students earn
+        both the BS IS and MISM degrees. The BS IS program is a 64-credit
+        degree including pre-management, junior core, management core, 
+        and a capstone.
+        </p>
+    </div>
+    
 <div class = "enterBelow">
     Enter your information <strong>below</strong> to calculate your chance of being admitted into the program!
 </div>
