--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!-- 
 GROUP PROJECT 1 (side work)
 Professor Hilton IS 303 W22
@@ -30,15 +29,18 @@ Jefferson Lambert
         -->
 
 
-     <h2>Program Overview</h2>
-
-    <p class="justify-text">
-    The BS Information Systems program is available as a four-year traditional 
-    degree or as a five-year integrated option where students earn
-    both the BS IS and MISM degrees. The BS IS program is a 64-credit
-    degree including pre-management, junior core, management core, 
-    and a capstone.
-    </p>
+    <div class = "backgroundImage">
+        <h2>Program Overview</h2>
+     
+        <p class="justify-text">
+        The BS Information Systems program is available as a four-year traditional
+        degree or as a five-year integrated option where students earn
+        both the BS IS and MISM degrees. The BS IS program is a 64-credit
+        degree including pre-management, junior core, management core,
+        and a capstone.
+        </p>
+    </div>
+    
 
 <div class = "enterBelow">
     Enter your information <strong>below</strong> to calculate your chance of being admitted into the program!
