--- a/index.html
+++ b/index.html
@@ -22,33 +22,43 @@ Jefferson Lambert
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
 </head>
-<header><h1>Marriot School of Business: Information Systems</h1></header>
-<body id=''><!--This fieldset contains all the dropdowns and checkboxes and buttons. Each 'select' has 
-        unique id name. 201 has autofocus, and we probably need to specify in the reset button function
-        something like document.getElementById('201Grade').autofocus=true...not sure if that will work but it's there. 
-        -->
+<header><h1>Marriott School of Business: Information Systems</h1></header>
+<body id=''>
+    <!-- This contains a background image of the Marriott Center, 
+    along with a link to the Marriott School of Buisness's 
+    Information Systems Website-->
+    <div class="backgroundImage">
+        <button id="linkButton" onclick="link()"> Visit Marriot School of Business's Information Systems Website</button>
+    </div>
 
+    <!-- This function allows the button to link to the Marriott website-->
+    <script>
+    function link() {
+        window.open("https://marriott.byu.edu/infosys/");
+    }
+    </script>
 
-    <div class = "backgroundImage">
-        <h2>Program Overview</h2>
-     
-        <p class="justify-text">
-        The BS Information Systems program is available as a four-year traditional
-        degree or as a five-year integrated option where students earn
-        both the BS IS and MISM degrees. The BS IS program is a 64-credit
-        degree including pre-management, junior core, management core,
-        and a capstone.
-        </p>
-        </div>
+    <h2>Program Overview</h2>
+
+    <!--This fieldset contains all the dropdowns and checkboxes and buttons. Each 'select' has 
+    unique id name. 201 has autofocus, and we probably need to specify in the reset button function
+    something like document.getElementById('201Grade').autofocus=true...not sure if that will work 
+    but it's there. -->
+    <p class="justify-text">
+    The BS Information Systems program is available as a four-year traditional
+    degree or as a five-year integrated option where students earn
+    both the BS IS and MISM degrees. The BS IS program is a 64-credit
+    degree including pre-management, junior core, management core,
+    and a capstone.
+    </p>
     
-
-<div class = "enterBelow">
+<div class="enterBelow">
     Enter your information <strong>below</strong> to calculate your chance of being admitted into the program!
 </div>
 
     <fieldset id='fieldy'>
         <h2>Calculate Potential</h2>
-        <div class = "grid-container">
+        <div class="grid-container">
             <div class="grid-item">
             <form action=""><span>Information Systems 201</span><br>
                 <select onmouseleave="" name="grade" id="0" autofocus class = "selectBox">
