shortened link title

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Jefferson Lambert
     along with a link to the Marriott School of Buisness's 
     Information Systems Website-->
     <div class="backgroundImage">
-        <button id="linkButton" onclick="link()"> Visit Marriot School of Business's Information Systems Website</button>
+        <button id="linkButton" onclick="link()">Information Systems Website</button>
     </div>
 
     <!-- This function allows the button to link to the Marriott website-->
