--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@ Jefferson Lambert
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
 </head>
-<header><h1>Marriott School of Business: Information Systems</h1></header>
+<header>
+    <h1>Marriott School of Business: Information Systems</h1>
+    <button class = "link-button"id="linkButton" onclick="link()">Information Systems Website</button>
+</header>
 <body id=''>
+
     <!-- This contains a background image of the Marriott Center, 
     along with a link to the Marriott School of Buisness's 
     Information Systems Website-->
     <div class="backgroundImage">
-        <button id="linkButton" onclick="link()">Information Systems Website</button>
+        
     </div>
 
     <!-- This function allows the button to link to the Marriott website-->
