--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@ Jefferson Lambert
 
 -->
 
-<!--Things I still need to do: 
-    1. alerts when not all things are filled out.
-    2. add a URL to the business school 
-    3. pretty page
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,24 +17,22 @@ Jefferson Lambert
     <script src="index.js"></script>
 </head>
 <header>
+    <!-- This header contains the title of the webpage and a button that links
+    to the Marriott Information Systems website -->
     <h1>Marriott School of Business: Information Systems</h1>
-    <button class = "link-button"id="linkButton" onclick="link()">Information Systems Website</button>
+    <button class = "link-button" id="linkButton" onclick="link()">Information Systems Website</button>
 </header>
 <body id=''>
 
-    <!-- This contains a background image of the Marriott Center, 
-    along with a link to the Marriott School of Buisness's 
-    Information Systems Website-->
-    <div class="backgroundImage">
-        
-    </div>
-
     <!-- This function allows the button to link to the Marriott website-->
     <script>
-    function link() {
-        window.open("https://marriott.byu.edu/infosys/");
-    }
-    </script>
+        function link() {
+            window.open("https://marriott.byu.edu/infosys/");
+        }
+        </script>
+
+    <!-- This contains a background image of the Marriott Center, -->
+    <div class="backgroundImage"></div>
 
     <h2>Program Overview</h2>
 
@@ -56,9 +48,9 @@ Jefferson Lambert
     and a capstone.
     </p>
     
-<div class="enterBelow">
-    Enter your information <strong>below</strong> to calculate your chance of being admitted into the program!
-</div>
+    <div class="enterBelow">
+        Enter your information <strong>below</strong> to calculate your chance of being admitted into the program!
+    </div>
 
     <fieldset id='fieldy'>
         <h2>Calculate Potential</h2>
@@ -191,7 +183,7 @@ Jefferson Lambert
             <svg height="100" width="100">
             <circle id="myCircle" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="green" display = "none"/></svg>
     <!--display final grade here:-->
-    <p id="finalGrade">Weighted likelihood of getting in: </p>
+    <p id="finalGrade">Weighted likelihood of getting into the program: </p>
     </fieldset> 
     <br>
     <h2>Curriculum</h2>
