--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@ Jefferson Lambert
 </header>
 <body id=''>
 
-    <!-- This function allows the button to link to the Marriott website-->
-    <script>
-        function link() {
-            window.open("https://marriott.byu.edu/infosys/");
-        }
-        </script>
-
     <!-- This contains a background image of the Marriott Center, -->
     <div class="backgroundImage"></div>
 
@@ -70,7 +63,7 @@ Jefferson Lambert
                     <option value="108">D+</option>
                     <option value="109">D</option>
                     <option value="110">D-</option>
-                    <option value="111">F</option>
+                    <option value="111">E</option>
                 </select>
                 <span id="retake">Retake?</span><input id="retake0"type="checkbox" value="false">
                 <br><br>
@@ -91,7 +84,7 @@ Jefferson Lambert
                     <option value="108">D+</option>
                     <option value="109">D</option>
                     <option value="110">D-</option>
-                    <option value="111">F</option>
+                    <option value="111">E</option>
                 </select>
                 <span id="retake">Retake?</span><input id="retake1"type="checkbox" value="false">
                 <br><br>
@@ -112,7 +105,7 @@ Jefferson Lambert
                     <option value="108">D+</option>
                     <option value="109">D</option>
                     <option value="110">D-</option>
-                    <option value="111">F</option>
+                    <option value="111">E</option>
                 </select>
                 <span id="retake">Retake?</span><input id="retake2"type="checkbox" value="false">
                 <br><br>
@@ -133,7 +126,7 @@ Jefferson Lambert
                     <option value="108">D+</option>
                     <option value="109">D</option>
                     <option value="110">D-</option>
-                    <option value="111">F</option>
+                    <option value="111">E</option>
                 </select>
                 <span id="retake">Retake?</span><input id="retake3"type="checkbox" value="false">
                 <br><br>
@@ -154,7 +147,7 @@ Jefferson Lambert
                     <option value="108">D+</option>
                     <option value="109">D</option>
                     <option value="110">D-</option>
-                    <option value="111">F</option>
+                    <option value="111">E</option>
                 </select>
                 <span id="retake">Retake?</span><input id="retake4"type="checkbox" value="false">
                 <br><br>
@@ -183,7 +176,7 @@ Jefferson Lambert
             <svg height="100" width="100">
             <circle id="myCircle" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="green" display = "none"/></svg>
     <!--display final grade here:-->
-    <p id="finalGrade">Weighted likelihood of getting into the program: </p>
+    <p id="finalGrade">Weighted likelihood of getting into the program complete. Calculated GPA: </p>
     </fieldset> 
     <br>
     <h2>Curriculum</h2>
