they default to A now

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Jefferson Lambert
             <form action=""><span>Information Systems 201</span><br>
                 <select onmouseleave="" name="grade" id="0" autofocus class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
-                    <option value="100">A</option>
+                    <option value="100" selected>A</option>
                     <option value="101">A-</option>
                     <option value="102">B+</option>
                     <option value="103">B</option>
@@ -73,7 +73,7 @@ Jefferson Lambert
             <form action=""><span>Information Systems 303</span><br>
                 <select name="grade" id="1" class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
-                    <option value="100">A</option>
+                    <option value="100" selected>A</option>
                     <option value="101">A-</option>
                     <option value="102">B+</option>
                     <option value="103">B</option>
@@ -94,7 +94,7 @@ Jefferson Lambert
             <form action=""><span>Accounting 200</span><br>
                 <select name="accGrade" id="2" class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
-                    <option value="100">A</option>
+                    <option value="100" selected>A</option>
                     <option value="101">A-</option>
                     <option value="102">B+</option>
                     <option value="103">B</option>
@@ -115,7 +115,7 @@ Jefferson Lambert
             <form action=""><span>Marketing 201</span><br>
                 <select name="grade" id="3" class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
-                    <option value="100">A</option>
+                    <option value="100" selected>A</option>
                     <option value="101">A-</option>
                     <option value="102">B+</option>
                     <option value="103">B</option>
@@ -136,7 +136,7 @@ Jefferson Lambert
             <form action=""><span>Finance 121</span><br>
                 <select name="grade" id="4" class = "selectBox">
                     <option value='nada' disabled selected value style="display: none"></option>
-                    <option value="100">A</option>
+                    <option value="100" selected>A</option>
                     <option value="101">A-</option>
                     <option value="102">B+</option>
                     <option value="103">B</option>
