--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!-- 
-GROUP PROJECT 1 (side work)
+GROUP PROJECT 1
 Professor Hilton IS 303 W22
 
 Jefferson Lambert
-
+Carter Denton
+Cole Brunson
+Riley Marshall
 -->
 
 <!DOCTYPE html>
@@ -24,15 +26,14 @@ Jefferson Lambert
 </header>
 <body id=''>
 
-    <!-- This contains a background image of the Marriott Center, -->
+    <!-- This contains a background image of the Marriott Center -->
     <div class="backgroundImage"></div>
 
     <h2>Program Overview</h2>
 
     <!--This fieldset contains all the dropdowns and checkboxes and buttons. Each 'select' has 
-    unique id name. 201 has autofocus, and we probably need to specify in the reset button function
-    something like document.getElementById('201Grade').autofocus=true...not sure if that will work 
-    but it's there. -->
+    unique id name. 201 has autofocus and will get focus after the user clicks reset-->
+
     <p class="justify-text">
     The BS Information Systems program is available as a four-year traditional
     degree or as a five-year integrated option where students earn
@@ -175,10 +176,11 @@ Jefferson Lambert
             </div>
             <svg height="100" width="100">
             <circle id="myCircle" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="green" display = "none"/></svg>
-    <!--display final grade here:-->
+    <!--d isplay final grade here: -->
     <p id="finalGrade">Weighted likelihood of getting into the program complete. Calculated GPA: </p>
     </fieldset> 
     <br>
+    <!-- curriculum paragraphs: -->
     <h2>Curriculum</h2>
     <p class="justify-text">
     Information systems students and learn to define, develop, 
