small changes, the weighted gpa text only appears after you click calculate now

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Riley Marshall
             <svg height="100" width="100">
             <circle id="myCircle" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="green" display = "none"/></svg>
     <!--d isplay final grade here: -->
-    <p id="finalGrade">Weighted likelihood of getting into the program complete. Calculated GPA: </p>
+    <p id="finalGrade"></p>
     </fieldset> 
     <br>
     <!-- curriculum paragraphs: -->
